[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/player/Shaun.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/playersheet.png" type="Texture" id=2]
[ext_resource path="res://src/player/Inventory.gd" type="Script" id=3]
[ext_resource path="res://src/player/Shovel.gd" type="Script" id=4]
[ext_resource path="res://src/player/VertCollis.gd" type="Script" id=5]
[ext_resource path="res://src/main/pause.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/player/Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/player/Visualinventory.gd" type="Script" id=8]
[ext_resource path="res://assets/sprites/blocks/dirt_block_grass.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/seed/seed.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Dig"
length = 0.42
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.3, 0.34, 0.38, 0.42 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 21, 20, 19, 18 ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Plant"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 23, 22 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=6]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12, 30 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 1 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 17 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 11.5, 1.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 11.5, 1 )

[node name="Shaun" type="KinematicBody2D" groups=[
"Shaun",
]]
scale = Vector2( 2, 2 )
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 22
region_enabled = true
region_rect = Rect2( 0, 0, 210, 300 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idle"
anims/Dig = SubResource( 1 )
anims/Fall = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Plant = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Shovel" type="Area2D" parent="."]
editor/display_folded = true
visible = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shovel"]
position = Vector2( 0, 34 )
scale = Vector2( 0.25, 4 )
shape = SubResource( 8 )

[node name="PlaceBlock" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceBlock"]
position = Vector2( 0.5, 21 )
shape = SubResource( 9 )

[node name="DetectFloor" type="Area2D" parent="."]
position = Vector2( 0, 28 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectFloor"]
position = Vector2( 0, 2 )
shape = SubResource( 10 )

[node name="pause" parent="." instance=ExtResource( 6 )]
margin_left = -440.0
margin_top = -305.0
margin_right = -440.0
margin_bottom = -305.0
rect_scale = Vector2( 0.724845, 0.769327 )

[node name="Camera2D" parent="." instance=ExtResource( 7 )]
visible = false
limit_smoothed = true
smoothing_speed = 7.5
drag_margin_top = 0.5
editor_draw_limits = true
distance = 80.0

[node name="DetectCeil" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectCeil"]
position = Vector2( 0, -30 )
shape = SubResource( 11 )

[node name="Visualinventory" type="Node2D" parent="."]
position = Vector2( 20, -20.5 )
z_index = -2
script = ExtResource( 8 )

[node name="Block1" type="Sprite" parent="Visualinventory"]
visible = false
position = Vector2( 0, 2 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 9 )

[node name="Block2" type="Sprite" parent="Visualinventory"]
visible = false
position = Vector2( -3.5, -2.5 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 9 )

[node name="Block3" type="Sprite" parent="Visualinventory"]
visible = false
position = Vector2( 4, -2.5 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 9 )

[node name="Seed" type="Sprite" parent="Visualinventory"]
visible = false
position = Vector2( 0.5, -8 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 10 )
